--- a/Levantamento de Perdas/Src/Tela_Inicial_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Inicial_Producao.fx.yaml
@@ -289,7 +289,7 @@
         Icon: =Icon.Home
         OnSelect: |-
             =Select(Icon2);
-            Back();
+            Navigate(Tela_acerto_levantamento,ScreenTransition.None);
             //Navigate(Tela_Inicial_app;ScreenTransition.None)
         PaddingBottom: =22
         PaddingLeft: =22
