--- a/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
@@ -13,9 +13,23 @@
         Icon: =Icon.Cancel
         OnSelect: |-
             =ResetForm('Form Produção');
-            Set(varselect , 0) ;
-            UpdateContext({TelaAnterior : LookUp(colRoleKeys, Role = vartela)});
-            Navigate(TelaAnterior.Screen)
+            Set(
+                varselect,
+                0
+            );
+            If(
+                'Form Produção'.Mode <> FormMode.New,
+                Back(),
+                UpdateContext(
+                    {
+                        TelaAnterior: LookUp(
+                            colRoleKeys,
+                            Role = vartela
+                        )
+                    }
+                );
+                Navigate(TelaAnterior.Screen)
+            )
         PaddingBottom: =22
         PaddingLeft: =22
         PaddingRight: =22
@@ -27,7 +41,7 @@
 
     IconAccept1 As icon.Check:
         AccessibleLabel: =Self.Tooltip
-        DisplayMode: =If(varDelta < 0 || varprod_realizada <=0 || LabelAlertaDelta.Visible = true , DisplayMode.Disabled  ,DisplayMode.Edit)
+        DisplayMode: =If('Form Produção'.Mode <> FormMode.New , DisplayMode.Edit , If(varDelta < 0 || varprod_realizada <=0 || LabelAlertaDelta.Visible = true , DisplayMode.Disabled  ,DisplayMode.Edit))
         Height: =88
         Icon: =Icon.Check
         OnSelect: |
@@ -446,6 +460,7 @@
 
             DataCarddata As datepicker:
                 DefaultDate: =If('Form Produção'.Mode <> FormMode.New ,DATA_Card.Default, If(Hour(Now()) > 0 , Today() , Today()-1))
+                DisplayMode: =If('Form Produção'.Mode <> FormMode.New , DisplayMode.Disabled , DisplayMode.Edit)
                 Height: =73
                 OnChange: =Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & DataCardhora_inicio.Selected.Result)
                 Size: =24
@@ -504,6 +519,7 @@
                     
                      // Distinct(CreateHora;Hora).Result           LookUp(Distinct(LancamentoProducao;TIPO_DE_PECA).Result; Result = ThisItem.TIPO_DE_PECA)          If('Form Produção'.Mode <> FormMode.New ;{Value:HORA_INICIO_Card.Default})   LookUp(Distinct(LancamentoProducao;HORA_INICIO).Result; Result = ThisItem.HORA_INICIO)
                 DisplayFields: =["Result"]
+                DisplayMode: =If('Form Produção'.Mode <> FormMode.New , DisplayMode.Disabled , DisplayMode.Edit)
                 Height: =70
                 InputTextPlaceholder: ="Hora"
                 Items: =Distinct(CreateHora,Hora)
@@ -676,15 +692,15 @@
                 Align: =Align.Center
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                 Default: |-
-                    =If( varselect = 0 , If('Form Produção'.Mode <> FormMode.New ,COLABORADOR_Card.Default) , Last(Filter(CreateMaquina , (CAF = varmaquina))).CAPACIDADE) - Sum(Filter(
+                    =If( varselect = 0 , If('Form Produção'.Mode <> FormMode.New , DataCardValue8.Text) , Last(Filter(CreateMaquina , (CAF = varmaquina))).CAPACIDADE - Sum(Filter(
                             LancamentoProducao,
                             ((MAQUINA = varmaquina)  && (DATA = Text(DataCarddata.SelectedDate)) && (HORA_INICIO = DataCardhora_inicio.Selected.Result)) 
                         ).QUANTIDADE , QUANTIDADE) - Sum(Filter(
                             LancamentoPerdas,
                             ((MAQUINA = varmaquina)  && (DATA = Text(DataCarddata.SelectedDate)) && (HORA_INICIO = DataCardhora_inicio.Selected.Result)) 
-                        ).QUANTIDADE , QUANTIDADE)
+                        ).QUANTIDADE , QUANTIDADE))
                 DelayOutput: =true
-                DisplayMode: =Parent.DisplayMode
+                DisplayMode: =If('Form Produção'.Mode <> FormMode.New , Disabled, DisplayMode.Edit)
                 FontWeight: =FontWeight.Bold
                 Height: =70
                 HintText: ="Insira a quantidade produzida"
@@ -1163,13 +1179,13 @@
     LabelAlertaDelta As label:
         Color: =RGBA(255, 255, 255, 1)
         Fill: =RGBA(255, 0, 0, 1)
-        Height: =924
+        Height: =915
         Size: =21
         Text: |-
             ="Atenção!!!
             
             Favor pressionar o botão de atualizar ou cancelar lançamento"
-        Visible: =If(Total_lancamento_hora.Text = Last(Filter(CreateMaquina , (CAF = varmaquina))).CAPACIDADE && varDelta <> 0 , true , false)
+        Visible: =If(Total_lancamento_hora.Text = Last(Filter(CreateMaquina , (CAF = varmaquina))).CAPACIDADE && varDelta <> 0 && 'Form Produção'.Mode = FormMode.New , true , false)
         Width: =609
         X: =20
         Y: =103
