--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -120,14 +120,15 @@
     "Tela_acerto_levantamento",
     "Tela_Ini_2911",
     "Tela_Ini_2912",
-    "Tela_Ini_2915",
     "Tela_Ini_2913",
     "Tela_Ini_2914",
+    "Tela_Ini_2915",
     "Caixa_Câmbio_2914",
     "Suporte_União_2914",
     "Usinagem_Eixo_Primário",
     "Usinagem_Eixo_Secundário",
     "Usinagem_Coroa_Cilíndrica",
-    "Usinagem_Engr_1ª_2ª"
+    "Usinagem_Engr_1ª_2ª",
+    "Usinagem_Engr._CDT_3ª"
   ]
 }
