--- a/Levantamento de Perdas/Src/App.fx.yaml
+++ b/Levantamento de Perdas/Src/App.fx.yaml
@@ -56,7 +56,7 @@ App As appinfo:
          { Role: "Engr._CDTs_3ª_e_4ª";Screen: Engr._CDTs_3ª_e_4ª };
          { Role: "Eixo_primário_e_secundário";Screen: Eixo_primário_e_secundário }; */
         
-         { Role: "Usinagem_Engr._CDT_3ª",Screen: Usinagem_Engr._CDT_3ª },
+         { Role: "Usinagem_Engr._CDT_3ª",Screen: Usinagem_Engr_CDT_3ª },
          { Role: "Usinagem_Engr_1ª_2ª",Screen: Usinagem_Engr_1ª_2ª },
          { Role: "Usinagem_Eixo_Secundário",Screen: Usinagem_Eixo_Secundário },
          { Role: "Usinagem_Eixo_Primário",Screen: Usinagem_Eixo_Primário },
