--- a/Levantamento de Perdas/Src/Usinagem_Engr_CDT_3%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Engr_CDT_3%aa.fx.yaml
@@ -1,4 +1,4 @@
-"'Usinagem_Engr._CDT_3ª' As screen":
+Usinagem_Engr_CDT_3ª As screen:
     BackgroundImage: =Transmissões_foto_bw
     ImagePosition: =ImagePosition.Fill
 
@@ -25,7 +25,7 @@
         Height: =88
         Size: =24
         Text: |-
-            ="Linha Usinagem Engr. 1ª/2ª
+            ="Linha Usinagem Engr. 3ª CDT
             UTE 2912"
         Width: =622
         X: =18
