--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -129,6 +129,6 @@
     "Usinagem_Eixo_Secundário",
     "Usinagem_Coroa_Cilíndrica",
     "Usinagem_Engr_1ª_2ª",
-    "Usinagem_Engr._CDT_3ª"
+    "Usinagem_Engr_CDT_3ª"
   ]
 }
