--- a/Levantamento de Perdas/Src/Usinagem_Engr_CDT_3%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Engr_CDT_3%aa.fx.yaml
@@ -13,7 +13,7 @@ Usinagem_Engr_CDT_3ª As screen:
     Label_setor_7 As label:
         Height: =70
         Size: =21
-        Text: ="Usinagem_Engr._CDT_3ª"
+        Text: ="Usinagem Engr. CDT 3ª"
         Visible: =false
         Width: =560
         X: =41
