--- a/Levantamento de Perdas/Src/Tela_Ini_2912.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2912.fx.yaml
@@ -72,7 +72,7 @@ Tela_Ini_2912 As screen:
         Height: =Button2_7.Height
         OnSelect: |-
             =Navigate(Usinagem_Engr_CDT_3ª);
-            Set(vartela , "Usinagem_Engr._CDT_3ª");
+            Set(vartela , "Usinagem_Engr_CDT_3ª");
         Size: =24
         Text: ="Usinagem Engr. CDT 3ª"
         Width: =Button2_7.Width
@@ -109,6 +109,9 @@ Tela_Ini_2912 As screen:
 
     Button2_15 As button:
         Height: =Button2_7.Height
+        OnSelect: |-
+            =Navigate(Usinagem_Engr_CDT_4ª);
+            Set(vartela , "Usinagem_Engr_CDT_4ª");
         Size: =24
         Text: ="Usinagem Engr. CDT 4ª"
         Width: =Button2_7.Width
