--- a/Levantamento de Perdas/Src/Tela_Ini_2912.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2912.fx.yaml
@@ -148,6 +148,9 @@ Tela_Ini_2912 As screen:
 
     Button2_19 As button:
         Height: =Button2_7.Height
+        OnSelect: |-
+            =Navigate(Usinagem_Engr_CDT_5ª);
+            Set(vartela , "Usinagem_Engr_CDT_5ª");
         Size: =24
         Text: ="Usinagem Engr. CDT 5ª"
         Width: =Button2_7.Width
