--- a/Levantamento de Perdas/Src/Usinagem_Engr_CDT_4%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Engr_CDT_4%aa.fx.yaml
@@ -59,7 +59,7 @@ Usinagem_Engr_CDT_4ª As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "81500020");
+            =Set( varmaquina , "815000019");
             Set( varsetor ,  Label_setor_8.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
@@ -85,7 +85,7 @@ Usinagem_Engr_CDT_4ª As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "981500922");
+            =Set( varmaquina , "201405005854");
             Set( varsetor ,  Label_setor_8.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
@@ -99,4 +99,18 @@ Usinagem_Engr_CDT_4ª As screen:
         X: =360
         Y: =450
         ZIndex: =6
+
+    Label3 As label:
+        Align: =Align.Center
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =150
+        Size: =21
+        Text: |-
+            ="Dentadora
+            Gleason 5854
+            OP.20"
+        Width: =280
+        X: =80
+        Y: =466
+        ZIndex: =7
 
