--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -130,7 +130,11 @@
     "Usinagem_Coroa_Cilíndrica",
     "Usinagem_Engr_1ª_2ª",
     "Usinagem_Engr_CDT_3ª",
+    "Usinagem_Engr_CDZ_3ª",
     "Usinagem_Engr_CDT_4ª",
-    "Usinagem_Engr_CDT_5ª"
+    "Usinagem_Engr_CDZ_4ª",
+    "Usinagem_Engr_CDT_5ª",
+    "Usinagem_Engr_CDZ_5ª",
+    "Usinagem_Coroinha"
   ]
 }
