--- a/Levantamento de Perdas/Src/Tela_Ini_2912.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2912.fx.yaml
@@ -91,6 +91,9 @@ Tela_Ini_2912 As screen:
 
     Button2_13 As button:
         Height: =Button2_7.Height
+        OnSelect: |-
+            =Navigate(Usinagem_Engr_CDZ_3ª);
+            Set(vartela , "Usinagem_Engr_CDZ_3ª");
         Size: =24
         Text: ="Usinagem Engr. CDZ 3ª"
         Width: =Button2_7.Width
@@ -130,6 +133,9 @@ Tela_Ini_2912 As screen:
 
     Button2_17 As button:
         Height: =Button2_7.Height
+        OnSelect: |-
+            =Navigate(Usinagem_Engr_CDZ_4ª);
+            Set(vartela , "Usinagem_Engr_CDZ_4ª");
         Size: =24
         Text: ="Usinagem Engr. CDZ 4ª"
         Width: =Button2_7.Width
@@ -169,6 +175,9 @@ Tela_Ini_2912 As screen:
 
     Button2_21 As button:
         Height: =Button2_7.Height
+        OnSelect: |-
+            =Navigate(Usinagem_Engr_CDZ_5ª);
+            Set(vartela , "Usinagem_Engr_CDZ_5ª");
         Size: =24
         Text: ="Usinagem Engr. CDZ 5ª"
         Width: =Button2_7.Width
@@ -187,6 +196,9 @@ Tela_Ini_2912 As screen:
 
     Button2_23 As button:
         Height: =Button2_7.Height
+        OnSelect: |-
+            =Navigate(Usinagem_Coroinha);
+            Set(vartela , "Usinagem_Coroinha");
         Size: =24
         Text: ="Usinagem Coroinha"
         Width: =Button2_7.Width
