--- a/Levantamento de Perdas/Src/Usinagem_Engr_CDZ_3%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Engr_CDZ_3%aa.fx.yaml
@@ -1,38 +1,38 @@
-Usinagem_Engr_CDT_5ª As screen:
+Usinagem_Engr_CDZ_3ª As screen:
     BackgroundImage: =Transmissões_foto_bw
     ImagePosition: =ImagePosition.Fill
 
-    Image3_9 As image:
+    Image3_10 As image:
         Height: =968
-        Image: ='Usinagem_Engr._CDT_5ª'
+        Image: ='Usinagem_Engr._CDZ_3ª'
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
         ZIndex: =1
 
-    Label_setor_9 As label:
+    Label_setor_10 As label:
         Height: =70
         Size: =21
-        Text: ="Usinagem Engr. CDT 5ª"
+        Text: ="Usinagem Engr. CDZ 3ª"
         Visible: =false
         Width: =560
         X: =41
         ZIndex: =2
 
-    Label_Local_9 As button:
+    Label_Local_10 As button:
         Align: =Align.Left
         DisplayMode: =DisplayMode.View
         Height: =88
         Size: =24
         Text: |-
-            ="Linha Usinagem Engr. 5ª CDT
+            ="Linha Usinagem Engr. 3ª CDZ
             UTE 2912"
         Width: =622
         X: =18
         Y: =36
         ZIndex: =3
 
-    Icon1_17 As icon.Home:
+    Icon1_18 As icon.Home:
         BorderColor: =RGBA(255, 255, 255, 1)
         Color: =RGBA(255, 255, 255, 1)
         FocusedBorderThickness: =1
@@ -48,19 +48,19 @@ Usinagem_Engr_CDT_5ª As screen:
         Y: =36
         ZIndex: =4
 
-    Btnmaq_106 As button:
+    Btnmaq_112 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =150
+        Height: =160
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "91500069");
-            Set( varsetor ,  Label_setor_9.Text );
+            =Set( varmaquina , "981500922");
+            Set( varsetor ,  Label_setor_10.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
             Set( varselect , 1) ;
@@ -69,51 +69,24 @@ Usinagem_Engr_CDT_5ª As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =167
-        X: =470
-        Y: =223
-        ZIndex: =5
-
-    Btnmaq_107 As button:
-        DisabledColor: =RGBA(0, 0, 0, 0)
-        DisabledFill: =RGBA(0, 0, 0, 0)
-        Fill: =RGBA(0, 0, 0, 0)
-        Height: =150
-        HoverColor: =RGBA(0, 0, 0, 0)
-        HoverFill: |-
-            =RGBA(4, 114, 14, 0.9)
-            
-            //ColorFade(RGBA(56; 96; 178; 1); -20%)
-        OnSelect: |
-            =Set( varmaquina , "91500071");
-            Set( varsetor ,  Label_setor_9.Text );
-            Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
-            Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
-            Set( varselect , 1) ;
-            Set(varDelay,false);
-            Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & DataCardhora_inicio.Selected.Result) ; Set(varDelta , 0) ;
-            NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
-        Size: =24
-        Text: =""
-        Width: =167
-        X: =470
-        Y: =398
+        Width: =162
+        X: =152
+        Y: =390
         ZIndex: =6
 
-    Btnmaq_108 As button:
+    Btnmaq_113 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
-        DisplayMode: =DisplayMode.View
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =150
+        Height: =160
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "1500402");
-            Set( varsetor ,  Label_setor_9.Text );
+            =Set( varmaquina , "981500922");
+            Set( varsetor ,  Label_setor_10.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
             Set( varselect , 1) ;
@@ -122,25 +95,24 @@ Usinagem_Engr_CDT_5ª As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Tooltip: ="Máquina sem CAF no sistema"
-        Width: =167
-        X: =470
-        Y: =572
+        Width: =162
+        X: =469
+        Y: =390
         ZIndex: =7
 
-    Btnmaq_109 As button:
+    Btnmaq_126 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =150
+        Height: =160
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "961502085");
-            Set( varsetor ,  Label_setor_9.Text );
+            =Set( varmaquina , "981500922");
+            Set( varsetor ,  Label_setor_10.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
             Set( varselect , 1) ;
@@ -149,24 +121,24 @@ Usinagem_Engr_CDT_5ª As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =167
-        X: =470
-        Y: =744
+        Width: =162
+        X: =469
+        Y: =595
         ZIndex: =8
 
-    Btnmaq_110 As button:
+    Btnmaq_127 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =150
+        Height: =160
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "81500086");
-            Set( varsetor ,  Label_setor_9.Text );
+            =Set( varmaquina , "981500922");
+            Set( varsetor ,  Label_setor_10.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
             Set( varselect , 1) ;
@@ -175,35 +147,8 @@ Usinagem_Engr_CDT_5ª As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =167
-        X: =470
-        Y: =917
+        Width: =162
+        X: =469
+        Y: =800
         ZIndex: =9
-
-    Btnmaq_111 As button:
-        DisabledColor: =RGBA(0, 0, 0, 0)
-        DisabledFill: =RGBA(0, 0, 0, 0)
-        DisplayMode: =DisplayMode.View
-        Fill: =RGBA(0, 0, 0, 0)
-        Height: =150
-        HoverColor: =RGBA(0, 0, 0, 0)
-        HoverFill: |-
-            =RGBA(4, 114, 14, 0.9)
-            
-            //ColorFade(RGBA(56; 96; 178; 1); -20%)
-        OnSelect: |
-            =Set( varmaquina , "1500402");
-            Set( varsetor ,  Label_setor_9.Text );
-            Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
-            Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
-            Set( varselect , 1) ;
-            Set(varDelay,false);
-            Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & DataCardhora_inicio.Selected.Result) ; Set(varDelta , 0) ;
-            NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
-        Size: =24
-        Text: =""
-        Width: =167
-        X: =148
-        Y: =917
-        ZIndex: =10
 
