--- a/Levantamento de Perdas/Src/Usinagem_Engr_CDZ_3%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Engr_CDZ_3%aa.fx.yaml
@@ -51,6 +51,7 @@ Usinagem_Engr_CDZ_3ª As screen:
     Btnmaq_112 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
+        DisplayMode: =DisplayMode.View
         Fill: =RGBA(0, 0, 0, 0)
         Height: =160
         HoverColor: =RGBA(0, 0, 0, 0)
@@ -69,6 +70,7 @@ Usinagem_Engr_CDZ_3ª As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
+        Tooltip: ="Máquina com CAF não cadastrado"
         Width: =162
         X: =152
         Y: =390
@@ -85,7 +87,7 @@ Usinagem_Engr_CDZ_3ª As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "981500922");
+            =Set( varmaquina , "961502074");
             Set( varsetor ,  Label_setor_10.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
@@ -111,7 +113,7 @@ Usinagem_Engr_CDZ_3ª As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "981500922");
+            =Set( varmaquina , "981500923");
             Set( varsetor ,  Label_setor_10.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
@@ -137,7 +139,7 @@ Usinagem_Engr_CDZ_3ª As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "981500922");
+            =Set( varmaquina , "81500021");
             Set( varsetor ,  Label_setor_10.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
