--- a/Levantamento de Perdas/Src/Usinagem_Engr_CDT_4%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Engr_CDT_4%aa.fx.yaml
@@ -103,6 +103,7 @@ Usinagem_Engr_CDT_4ª As screen:
     Label3 As label:
         Align: =Align.Center
         Fill: =RGBA(255, 255, 255, 1)
+        FontWeight: =FontWeight.Bold
         Height: =150
         Size: =21
         Text: |-
