--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -135,6 +135,8 @@
     "Usinagem_Engr_CDZ_4ª",
     "Usinagem_Engr_CDT_5ª",
     "Usinagem_Engr_CDZ_5ª",
-    "Usinagem_Coroinha"
+    "Usinagem_Coroinha",
+    "Usinagem_Luva_1ª2ª",
+    "Usinagem_Luva_3ª4ª"
   ]
 }
