--- a/Levantamento de Perdas/Src/App.fx.yaml
+++ b/Levantamento de Perdas/Src/App.fx.yaml
@@ -18,12 +18,7 @@ App As appinfo:
             colRoleKeys,
             Table(
          /*{ Role: "Usinagem_Tampa";Screen: Usinagem_Tampa };
-         { Role: "Usinagem_Satélite";Screen: Usinagem_Satélite };
-         { Role: "Usinagem_Planetária";Screen: Usinagem_Planetária };
-         { Role: "Usinagem_Marcha_Ré";Screen: Usinagem_Marcha_Ré };
-         { Role: "Usinagem_Luva_5ª";Screen: Usinagem_Luva_5ª };
-         { Role: "Usinagem_Luva_3ª4ª";Screen: Usinagem_Luva_3ª4ª };
-         { Role: "Usinagem_Luva_1ª2ª";Screen: Usinagem_Luva_1ª2ª };
+        
          { Role: "Usinagem_Caixa_Diferencial_Completa";Screen: Usinagem_Caixa_Diferencial_Completa };
          { Role: "Usinagem_Caixa_Diferencial";Screen: Usinagem_Caixa_Diferencial };
          { Role: "Todas_Peças";Screen: Todas_Peças };
@@ -49,6 +44,14 @@ App As appinfo:
          { Role: "Fornos_Cont";Screen: Fornos_Cont };
          { Role: "Engr._CDTs_3ª_e_4ª";Screen: Engr._CDTs_3ª_e_4ª };
          { Role: "Eixo_primário_e_secundário";Screen: Eixo_primário_e_secundário }; */
+        
+        
+         { Role: "Usinagem_Satélite",Screen: Usinagem_Satélite },
+         { Role: "Usinagem_Planetária",Screen: Usinagem_Planetária },
+         { Role: "Usinagem_Marcha_Ré",Screen: Usinagem_Marcha_Ré },
+         { Role: "Usinagem_Luva_5ª",Screen: Usinagem_Luva_5ª },
+         { Role: "Usinagem_Luva_3ª4ª",Screen: Usinagem_Luva_3ª4ª },
+         { Role: "Usinagem_Luva_1ª2ª",Screen: Usinagem_Luva_1ª2ª },
         
          { Role: "Usinagem_Coroinha",Screen: Usinagem_Coroinha },
          { Role: "Usinagem_Engr_CDZ_5ª",Screen: Usinagem_Engr_CDZ_5ª },
