--- a/Levantamento de Perdas/Src/Tela_Ini_2913.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2913.fx.yaml
@@ -13,6 +13,9 @@ Tela_Ini_2913 As screen:
 
     Button2_24 As button:
         Height: =95
+        OnSelect: |-
+            =Navigate(Usinagem_Luva_1ª2ª);
+            Set(vartela , "Usinagem_Luva_1ª2ª");
         Size: =24
         Text: ="Usinagem Luva 1ª2ª"
         Width: =280
@@ -31,6 +34,9 @@ Tela_Ini_2913 As screen:
 
     Button2_26 As button:
         Height: =Button2_24.Height
+        OnSelect: |
+            =Navigate(Usinagem_Luva_3ª4ª);
+            Set(vartela , "Navigate(Usinagem_Luva_3ª4ª);;
         Size: =24
         Text: ="Usinagem Luva 3ª4ª"
         Width: =Button2_24.Width
@@ -65,6 +71,9 @@ Tela_Ini_2913 As screen:
 
     Button2_28 As button:
         Height: =Button2_24.Height
+        OnSelect: |
+            =Navigate(Usinagem_Luva_5ª);
+            Set(vartela , "Navigate(Usinagem_Luva_5ª);;
         Size: =24
         Text: ="Usinagem Luva 5ª"
         Width: =Button2_24.Width
